# mtp-sdk

./: .npmrc  CONTRIBUTING.md  INSTANCE_MANAGEMENT_ANALYSIS.md  LICENSE  ORDERBOOK_CALCULATION_FLOW.md  README.md  TpSdk.podspec  nitro.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/cxpmobile/tpsdk/: TpSdk.kt  TpSdkPackage.kt
cpp/: TpSdkCppHybrid.cpp  TpSdkCppHybrid.hpp  Utils.cpp  Utils.hpp  WebSocketMessageProcessor.cpp  WebSocketMessageProcessor.hpp
cpp/core/: DataConverter.hpp  DataStructs.hpp  MemoryDebug.cpp  MemoryDebug.hpp  ObjectPool.hpp  RingBuffer.hpp  SimdjsonParser.cpp  SimdjsonParser.hpp  StreamProcessor.hpp
cpp/formatters/: OrderBookFormatter.cpp  OrderBookFormatter.hpp
cpp/helpers/: JsonHelpers.cpp  JsonHelpers.hpp  OrderBookHelpers.cpp  OrderBookHelpers.hpp
cpp/managers/: KlineManager.cpp  KlineManager.hpp  LifecycleManager.cpp  LifecycleManager.hpp  OrderBookManager.cpp  OrderBookManager.hpp  TickerManager.cpp  TickerManager.hpp  TradesManager.cpp  TradesManager.hpp  UserDataManager.cpp  UserDataManager.hpp
cpp/processors/: MessageProcessor.cpp  MessageProcessor.hpp
cpp/threadpool/: ThreadPool.hpp
example/: README.md  app.json  package.json  tsconfig.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/TpSdkExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/TpSdkExample.xcodeproj/: project.pbxproj
example/ios/TpSdkExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx  types.ts
example/src/components/: OrderBook.tsx  OrderBookAnimated.tsx
example/src/navigation/: AppNavigator.tsx
example/src/screens/: KlineScreen.tsx  MiniTickerPairScreen.tsx  MiniTickerScreen.tsx  OrderBookScreen.tsx  TradesScreen.tsx
example/src/stores/: useTradingStore.ts
example/src/utils/: cxpId.ts
ios/: TpSdk.swift
lib/module/: TpSdk.nitro.js  TpSdk.nitro.js.map  index.js  index.js.map
lib/module/sdk/: index.js  index.js.map
lib/module/shared/: TpSdkInstance.js  TpSdkInstance.js.map  callbackQueue.js  callbackQueue.js.map
lib/module/types/: index.js  index.js.map
lib/typescript/src/: TpSdk.nitro.d.ts  TpSdk.nitro.d.ts.map  index.d.ts  (+1 more)
src/: TpSdk.nitro.ts  index.ts  index.tsx
src/sdk/: index.ts
src/shared/: README.md  SubscriptionManager.ts  TpSdkInstance.ts  callbackQueue.ts  errors.ts  moduleUtils.ts
src/types/: index.ts
(+35 files in other folders)
